src/parser/parser.c
// Recursive descent parser for the C language, based on the reference c99 grammar: see docs/c99.bnf
// Currently intentionally leaks memory for the purpose of simplicity, will likely be fixed later (memory arena?).
//
// The grammar has been modified to remove left-recursion to enable parsing via recursive descent (see docs/c99.bnf) for
// the reference grammar. However, the modified grammar is not LL(k), as there are some ambiguities that require an
// infinite lookahead to resolve.
// These are:
// 1. When parsing a <unary-expression> starting with 'sizeof', it is not possible predict whether to parse
//    'sizeof' <unary-expression> or 'sizeof' '(' <type-name> ')', as both a <unary-expression> and a <type-name> can
//    be prefixed with an arbitrary number of '(' tokens.
// 2. When parsing a <parameter-declarator> it is not possible to determine whether to parse a <declarator> or an
//    abstract declarator without an infinite lookahead, as both can be prefixed with an arbitrary number of '*' and
//    '(' tokens.
// To resolve these ambiguities, we use a simple backtracking mechanism to try all possible parses and backtrack if
// a parse fails.
//
// The C grammar is not a context free grammar, as the parser needs to be able to differentiate identifiers versus
// typedef names.
// Consider the following example expression: `(a)*b`. What the parser should generate for this statement is dependent
// on what `a` is. If `a` is a typedef name, then this is a dereference and cast, otherwise it is multiplication.
// Another example is the statement `a * b`. If a is an identifier, than this is an expression statement, but if a is
// a typedef name, then it's a declaration.
// To keep track, the parser will have a simplified symbol table, which keeps track of lexical scopes, identifiers and
// typedefs. Why do we need to keep track of both identifiers and typedefs? Because a typedef or identifier in an inner
// scope can hide a typedef or identifier declared in an enclosing scope, so when looking up a symbol to check if it is
// a typedef, we need to know if there's a different definition of the symbol in a closer scope.
// For example:
// ```
// typedef int value;
// int square(int value) {
//     return value * value; // <-- This is ok, in this context value refers to an identifier
//                           //     If we didn't keep track of identifiers in the parser's symbol table, we would just
//                           //     see that the enclosing scope had a typedef named "value", and would not be able to
//                           //     correctly parse this.
// }
// ```
//
// Restoring the parser's symbol table when backtracking:
// Each symbol and scope in the symbol table store the value of the index of the next token at the time they were
// created. The parser checkpoints also include this value. When restoring from a checkpoint, any scope or symbol which
// have a `next_token_index` value larger than the value in the checkpoint should be removed from the symbol table.

#include <stdarg.h>
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include <assert.h>

#include "errors.h"
#include "parser.h"

#include <string.h>

#include "parser/lexer.h"

void append_parse_error(parse_error_vector_t* vec, parse_error_t error) {
    VEC_APPEND(vec, error);
}

typedef struct ParserSymbol
{
    enum {
        SYMBOL_IDENTIFIER,
        SYMBOL_TYPEDEF,
    } kind;
    token_t *token;
    // if this is a typedef, the type
    type_t *type;
    // Index of the next token when this symbol was created
    // For restoring the state of the parse table when backtracking
    int next_token_index;
} parser_symbol_t;

typedef struct ParserScope parser_scope_t;
struct ParserScope {
    parser_scope_t *parent;
    // Map of symbol name -> symbol
    hash_table_t symbols_map;
    // A list of symbols in the symbol table.
    // Used for rolling back the symbol table state when backtracking.
    ptr_vector_t symbols_vec;
    // Index of the next token when this symbol was created
    // For restoring the state of the parse table when backtracking
    int next_token_index;
};

struct ParserSymbolTable {
    parser_scope_t *root_scope;
    parser_scope_t *current_scope;
};

void parser_enter_scope(parser_t *parser) {
    parser_scope_t *scope = malloc(sizeof (parser_scope_t));
    *scope = (parser_scope_t) {
        .parent = parser->symbol_table->current_scope,
        .symbols_map = hash_table_create_string_keys(64),
    };
    parser->symbol_table->current_scope = scope;
}

void parser_leave_scope(parser_t *parser) {
    assert(parser->symbol_table->current_scope != parser->symbol_table->root_scope);
    assert(parser->symbol_table->current_scope != NULL);
    parser_scope_t *scope = parser->symbol_table->current_scope;
    parser->symbol_table->current_scope = scope->parent;
    free(scope);
}

void parser_insert_symbol(parser_t *parser, const parser_symbol_t *symbol) {
    parser_symbol_t *prev = NULL;
    if (hash_table_lookup(&parser->symbol_table->current_scope->symbols_map, symbol->token->value, (void**) &prev) &&
        prev->kind != symbol->kind) {
        append_parse_error(&parser->errors, (parse_error_t) {
            .previous_production_name = NULL,
            .previous_token = NULL,
            .production_name = NULL,
            .token = symbol->token,
            .kind = PARSE_ERROR_REDECLARATION_OF_SYMBOL_AS_DIFFERENT_TYPE,
            .value.redeclaration_of_symbol = {
                .prev = prev->token,
                .redec = symbol->token,
            }
        });
        // don't replace the existing value
        return;
    }

    hash_table_insert(&parser->symbol_table->current_scope->symbols_map, symbol->token->value, (void*) symbol);
    VEC_APPEND(&parser->symbol_table->current_scope->symbols_vec, symbol);
}

void parser_insert_symbol_for_declaration(parser_t *parser, const declaration_t *decl) {
    bool is_typedef = decl->type->storage_class == STORAGE_CLASS_TYPEDEF;
    if (is_typedef && decl->initializer != NULL) {
        // TODO: error for illegal initializer
    }

    // If this doesn't declare anything, don't create a symbol
    if (decl->identifier == NULL) return;

    parser_symbol_t *symbol = malloc(sizeof(parser_symbol_t));
    *symbol = (parser_symbol_t) {
        .kind = is_typedef ? SYMBOL_TYPEDEF : SYMBOL_IDENTIFIER,
        .next_token_index = parser->next_token_index,
        .token = decl->identifier,
        .type = is_typedef ? decl->type : NULL,
    };
    parser_insert_symbol(parser, symbol);
}

parser_symbol_t *parser_lookup_symbol_in_current_scope(const parser_t *parser, const char *name) {
    const parser_scope_t *scope = parser->symbol_table->current_scope;
    parser_symbol_t *symbol;
    hash_table_lookup(&scope->symbols_map, name, (void**) &symbol);
    return symbol;
}

parser_symbol_t *parser_lookup_symbol(parser_t *parser, const char *name) {
    const parser_scope_t *scope = parser->symbol_table->current_scope;
    while (scope != NULL) {
        parser_symbol_t *symbol = NULL;
        hash_table_lookup(&scope->symbols_map, name, (void**) &symbol);
        if (symbol != NULL) return symbol;
        scope = scope->parent;
    }
    return NULL;
}

bool any_non_null(size_t count, ...) {
    va_list args;
    va_start(args, count);
    for (size_t i = 0; i < count; i++) {
        if (va_arg(args, void *) != NULL) {
            va_end(args);
            return true;
        }
    }
    va_end(args);
    return false;
}

void* first_non_null(size_t count, ...) {
    va_list args;
    va_start(args, count);
    for (size_t i = 0; i < count; i++) {
        void *arg = va_arg(args, void *);
        if (arg != NULL) {
            va_end(args);
            return arg;
        }
    }
    va_end(args);
    return NULL;
}

bool any_token_kind_equals(token_kind_t kind, size_t count, ...) {
    va_list args;
    va_start(args, count);
    for (size_t i = 0; i < count; i++) {
        token_kind_t arg = va_arg(args, token_kind_t);
        if (arg == kind) {
            va_end(args);
            return true;
        }
    }
    va_end(args);
    return false;
}

#define FIRST_NON_NULL(...) first_non_null(sizeof((void*[]){__VA_ARGS__}) / sizeof(void*), __VA_ARGS__)
#define ANY_NON_NULL(...) any_non_null(sizeof((void*[]){__VA_ARGS__}) / sizeof(void*), __VA_ARGS__)
#define TOKEN_KIND_ONE_OF(value, ...) any_token_kind_equals(value, sizeof((token_kind_t[]){__VA_ARGS__}) / sizeof(token_kind_t), __VA_ARGS__)

const token_kind_t DECLARATION_SPECIFIER_TOKENS[] = {
    TK_TYPEDEF, TK_EXTERN, TK_STATIC, TK_AUTO, TK_REGISTER, // storage-class-specifier
    TK_VOID, TK_CHAR, TK_SHORT, TK_INT, TK_LONG, TK_FLOAT, TK_DOUBLE, TK_SIGNED, TK_UNSIGNED, TK_BOOL, TK_COMPLEX, TK_STRUCT, TK_UNION, TK_ENUM, // type-specifiers
    TK_CONST, TK_RESTRICT, TK_VOLATILE, // type-qualifiers
    TK_INLINE, // function-specifier
};

void print_parse_error(FILE *__restrict stream, parse_error_t *error) {
    source_position_t position = error->token->position;
    fprintf(stream, "%s:%d:%d: error: ", position.path, position.line, position.column);
    switch (error->kind) {
        case PARSE_ERROR_EXPECTED_TOKEN:
            fprintf(stream, error->value.expected_token.expected_count > 1 ? "expected one of " : "expected ");
            for (size_t i = 0; i < error->value.expected_token.expected_count; i++) {
                fprintf(stream, "%s", token_kind_display_names[error->value.expected_token.expected[i]]);
                if (i < error->value.expected_token.expected_count - 1) {
                    fprintf(stream, ", ");
                } else if (i == error->value.expected_token.expected_count - 2) {
                    fprintf(stream, " or ");
                }
            }

            if (error->previous_production_name != NULL ) {
                fprintf(stream, " after %s\n", error->previous_production_name);
            }
            break;
        case PARSE_ERROR_UNEXPECTED_END_OF_INPUT:
            fprintf(stream, "Unexpected end of input\n");
            fprintf(stream, "Expected token: %s\n", token_kind_display_names[error->value.unexpected_end_of_input.expected]);
            break;
        case PARSE_ERROR_ILLEGAL_USE_OF_RESTRICT:
            fprintf(stream, "Illegal use of restrict (requires pointer or reference)\n");
            break;
        case PARSE_ERROR_ILLEGAL_DECLARATION_SPECIFIERS:
            if (error->previous_token != NULL) {
                fprintf(stream, "Cannot combine %s with previous specifier %s\n",
                        error->token->value, error->previous_token->value);
            } else {
                fprintf(stream, "Illegal declaration specifiers\n");
            }
            break;
        case PARSE_ERROR_TYPE_SPECIFIER_MISSING:
            fprintf(stream, "Type specifier missing\n");
            break;
        case PARSE_ERROR_EXPECTED_EXPRESSION_OR_TYPE_NAME_AFTER_SIZEOF:
            fprintf(stream, "Expected expression or `(` type-name `)` after 'sizeof'\n");
            break;
        case PARSE_ERROR_PARAMETER_TYPE_MALFORMED:
            fprintf(stream, "Expected a declarator, comma, closing parenthesis, or ellipsis after type\n");
            break;
        case PARSE_ERROR_EXPECTED_EXPRESSION:
            fprintf(stream, "Expected an expression\n");
            break;
        case PARSE_ERROR_REDECLARATION_OF_SYMBOL_AS_DIFFERENT_TYPE:
            fprintf(stream, "redeclaration of symbol %s as different type", error->value.redeclaration_of_symbol.redec->value);
            break;
        case PARSE_ERROR_ENUM_SPECIFIER_WITHOUT_IDENTIFIER_OR_ENUMERATOR_LIST:
            fprintf(stream, "%s:%d:%d error: enum specifier must be followed by an identifier or an enumerator list\n",
                    error->token->position.path, error->token->position.line, error->token->position.column);
            break;
    }
}

source_span_t spanning_tokens(token_t *start, token_t *end) {
    return (source_span_t) {
            .start = start->position,
            .end = end->position,
    };
}

source_span_t span_starting(source_position_t start, token_t *end) {
    return (source_span_t) {
            .start = start,
            .end = end->position,
    };
}

source_span_t spanning(source_position_t start, source_position_t end) {
    return (source_span_t) {
            .start = start,
            .end = end,
    };
}

#define SPANNING_NEXT(start) spanning_tokens(start, next_token(parser))
#define SPAN_STARTING(start) span_starting(start, next_token(parser))

typedef struct ParseCheckpoint {
    size_t token_index;
    size_t error_index;
} parse_checkpoint_t;

parser_t pinit(lexer_t lexer) {
    parser_symbol_table_t symbol_table = malloc(sizeof(struct ParserSymbolTable));
    symbol_table->root_scope = malloc(sizeof(parser_scope_t));
    *symbol_table->root_scope = (parser_scope_t) {
        .parent = NULL,
        .symbols_map = hash_table_create_string_keys(64),
    };
    symbol_table->current_scope = symbol_table->root_scope;
    return (parser_t) {
            .lexer = lexer,
            .tokens = {.size = 0, .capacity = 0, .buffer = NULL},
            .errors = {.size = 0, .capacity = 0, .buffer = NULL},
            .next_token_index = 0,
            .symbol_table = symbol_table,
    };
}

void recover(parser_t *parser);

/**
 * Creates a checkpoint at the current parser state. Later, the parser can be restored to this state using
 * the backtrack function.
 * @param parser Parser instance
 * @return Checkpoint
 */
parse_checkpoint_t create_checkpoint(const parser_t* parser) {
    return (parse_checkpoint_t) {
        .token_index = parser->next_token_index,
        .error_index = parser->errors.size,
    };
}

/**
 * Restores the parser to a previously saved state.
 * @param parser Parser instance
 * @param checkpoint Checkpoint to restore to
 */
void backtrack(parser_t* parser, parse_checkpoint_t checkpoint) {
    parser->next_token_index = checkpoint.token_index;
    parser->errors.size = checkpoint.error_index;

    // Restore the symbol table state
    // First, leave any scopes that were entered after the checkpoint was created.
    while(parser->symbol_table->current_scope != parser->symbol_table->root_scope &&
        parser->symbol_table->current_scope->next_token_index > checkpoint.token_index) {
        parser_leave_scope(parser);
    }
    // Next, remove any symbols that were added to the now current scope after the checkpoint was created.
    parser_scope_t *scope = parser->symbol_table->current_scope;
    for (int i = scope->symbols_vec.size; i > 0; i -= 1) {
        parser_symbol_t *symbol = scope->symbols_vec.buffer[i-1];
        if (symbol->next_token_index <= checkpoint.token_index) break;
        hash_table_remove(&scope->symbols_map, symbol->token->value, NULL);
        scope->symbols_vec.size -= 1;
    }
}

token_t *next_token(parser_t* parser) {
    token_t* token;
    if (parser->next_token_index < parser->tokens.size) {
        token = parser->tokens.buffer[parser->next_token_index];
    } else {
        token_t *next = malloc(sizeof(token_t));
        *next = lscan(&parser->lexer);
        append_token_ptr(&parser->tokens.buffer, &parser->tokens.size, &parser->tokens.capacity, next);
        token = parser->tokens.buffer[parser->tokens.size - 1];
    }
    return token;
}

source_position_t* current_position(parser_t* parser) {
    return &next_token(parser)->position;
}

bool peek(parser_t* parser, token_kind_t kind) {
    return next_token(parser)->kind == kind;
}

bool peek2(parser_t *parser, token_kind_t kind) {
    parse_checkpoint_t checkpoint  = create_checkpoint(parser);
    parser->next_token_index += 1;
    bool result = peek(parser, kind);
    backtrack(parser, checkpoint);
    return result;
}

bool accept(parser_t* parser, token_kind_t kind, token_t** token_out) {
    token_t* token = next_token(parser);
    bool eof = token->kind == TK_EOF;
    if (token->kind == kind) {
        if (!eof) parser->next_token_index++;
        if (token_out != NULL) *token_out = token;
        return true;
    } else {
        return false;
    }
}

bool require(parser_t* parser, token_kind_t kind, token_t** token_out, const char* production_name, const char* previous_production_name) {
    if (accept(parser, kind, token_out)) {
        return true;
    } else {
        token_t* previous_token = parser->next_token_index > 0 ? parser->tokens.buffer[parser->next_token_index - 1] : NULL;
        token_t* token = next_token(parser);
        parse_error_t error;
        if (token->kind == TK_EOF) {
            error = (parse_error_t) {
                .token = token,
                .previous_token = previous_token,
                .production_name = production_name,
                .previous_production_name = previous_production_name,
                .kind = PARSE_ERROR_UNEXPECTED_END_OF_INPUT,
                .value.unexpected_end_of_input = {
                    .expected = kind,
                },
            };
        } else {
            error = (parse_error_t) {
                .token = token,
                .previous_token = previous_token,
                .production_name = production_name,
                .previous_production_name = previous_production_name,
                .kind = PARSE_ERROR_EXPECTED_TOKEN,
                .value.expected_token = {
                    .expected_count = 1,
                    .expected = {kind},
                },
            };
        }
        append_parse_error(&parser->errors, error);
        return false;
    }
}

/**
 * Recovers from a parse error by skipping tokens until a semicolon is found.
 * @param parser Parser instance
 */
void recover(parser_t *parser) {
    token_t *token = next_token(parser);
    while (token->kind != TK_EOF) {
        parser->next_token_index++;
        if (token->kind == TK_SEMICOLON) {
            break;
        }
        token = next_token(parser);
    }
}

bool parse(parser_t* parser, translation_unit_t *translation_unit) {
    ptr_vector_t external_declarations = {.buffer = NULL, .size = 0, .capacity = 0};

    while (next_token(parser)->kind != TK_EOF) {
        external_declaration_t *external_declaration = malloc(sizeof(external_declaration_t));
        if (!parse_external_declaration(parser, external_declaration)) {
            free(external_declaration);
            // discard tokens until we get to the next semicolon
            recover(parser);
        } else {
            append_ptr(&external_declarations.buffer, &external_declarations.size, &external_declarations.capacity, external_declaration);
        }
    }

    *translation_unit = (translation_unit_t) {
        .external_declarations = (external_declaration_t**) external_declarations.buffer,
        .length = external_declarations.size,
    };

    return parser->errors.size == 0;
}

// Declarations

bool typedef_name(parser_t *parser, bool _peek, token_t **token_out, type_t **type_out) {
    token_t *identifier = NULL;
    if (!peek(parser, TK_IDENTIFIER)) return false;

    identifier = next_token(parser);

    parser_symbol_t *symbol = parser_lookup_symbol(parser, identifier->value);
    if (symbol == NULL) return false;

    if (symbol->kind == SYMBOL_TYPEDEF) {
        if (token_out != NULL) *token_out = identifier;
        if (type_out != NULL) *type_out = symbol->type;
        if (!_peek) accept(parser, TK_IDENTIFIER, NULL); // consume the token
        return true;
    }

    return false;
}

/**
 * Parses a declaration.
 *
 * <declaration> ::= <declaration-specifiers> <init-declarator-list>? ';'
 *
 * <init-declarator-list> ::= <init-declarator> | <init-declarator-list> ',' <init-declarator>
 *
 * If this is called while parsing an external declaration, we have already parsed the declaration specifiers and the
 * first declarator of the init-declarator-list, so we pass them in as parameters.
 *
 * @param parser Parser instance
 * @param first_declarator First declarator of the init-declarator-list which has already been parsed,
 *                         or NULL if this is not an external declaration.
 * @param declarations Vector to append the parsed declarations to
 * @return true if the declaration was parsed successfully, false otherwise
 */
bool _parse_declaration(parser_t *parser, declaration_t *first_declarator, ptr_vector_t *declarations) {
    type_t type;
    if (first_declarator == NULL) {
        parse_declaration_specifiers(parser, &type); // always succeeds
    } else {
        type = *first_declarator->type;
    }

    if (first_declarator == NULL && accept(parser, TK_SEMICOLON, NULL)) {
        // This is a declaration without an identifier, e.g. "int;", or "typedef float;".
        // This is legal, but useless (unless it declares a struct/union or enum type).
        // TODO: warning for empty declaration
        if (type.kind == TYPE_STRUCT_OR_UNION || type.kind == TYPE_ENUM) {
            type_t *type_heap = malloc(sizeof(type_t));
            *type_heap = type;
            declaration_t *declaration = malloc(sizeof(declaration_t));
            *declaration = (declaration_t) {
                .type = type_heap,
                .identifier = NULL,
                .initializer = NULL
            };
            VEC_APPEND(declarations, declaration);
        }
        return true;
    }

    // If we didn't find a semicolon, then we need to attempt to parse an <init-declarator-list>.
    if (first_declarator != NULL) {
        // We've already parsed a declarator.
        // Check if we still need to parse an initializer, then parse the rest of the init-declarator-list.
        if (accept(parser, TK_ASSIGN, NULL)) {
            initializer_t *initializer = malloc(sizeof(initializer_t));
            if (!parse_initializer(parser, initializer)) {
                free(initializer);
                return false;
            }
            first_declarator->initializer = initializer;
        }
        append_ptr(&declarations->buffer, &declarations->size, &declarations->capacity, first_declarator);

        if (!accept(parser, TK_COMMA, NULL)) {
            parser_insert_symbol_for_declaration(parser, first_declarator);
            return require(parser, TK_SEMICOLON, NULL, "declaration", NULL);
        }
    }

    // Parse the init-declarator-list (or the remaining part of it).
    do {
        declaration_t *decl = malloc(sizeof(declaration_t));
        if (!parse_init_declarator(parser, type, decl)) {
            free(decl);
            return false;
        }
        append_ptr(&declarations->buffer, &declarations->size, &declarations->capacity, decl);
    } while (accept(parser, TK_COMMA, NULL));

    // Update the symbol table
    for (int i = 0; i < declarations->size; i += 1) {
        declaration_t *decl = declarations->buffer[i];
        parser_insert_symbol_for_declaration(parser, decl);
    }

    return require(parser, TK_SEMICOLON, NULL, "declaration", NULL);
}

bool parse_declaration(parser_t *parser, ptr_vector_t *declarations) {
    return _parse_declaration(parser, NULL, declarations);
}

parse_error_t illegal_declaration_specifiers(token_t *token, token_t *prev) {
    return (parse_error_t) {
            .token = token,
            .previous_token = prev,
            .production_name = "declaration-specifiers",
            .previous_production_name = NULL,
            .kind = PARSE_ERROR_ILLEGAL_DECLARATION_SPECIFIERS,
    };
}

/**
 * Parses either a specifier-qualifier-list or declaration-specifiers.
 *
 * * <declaration-specifiers> ::= <storage-class-specifier> <declaration-specifiers>
 *                              | <type-specifier> <declaration-specifiers>
 *                              | <type-qualifier> <declaration-specifiers>
 *                              | <function-specifier> <declaration-specifiers>
 *
 *  <specifier-qualifier-list> ::= <type-specifier> <specifier-qualifier-list>?
 *                               | <type-qualifier> <specifier-qualifier-list>?
 *
 * <storage-class-specifier> ::= 'typedef' | 'extern' | 'static' | 'auto' | 'register'
 *
 * <type-specifier> ::= 'void' | 'char' | 'short' | 'int' | 'long' | 'float' | 'double' | 'signed' | 'unsigned' | '_Bool' | '_Complex'
 *                    | <struct-or-union-specifier>
 *                    | <enum-specifier>
 *                    | <typedef-name>
 *
 * <type-qualifier> ::= 'const' | 'restrict' | 'volatile'
 *
 * <function-specifier> ::= 'inline'
 *
 * TODO: The parsing of enums is not yet implemented.
 * TODO: Inling is not yet implemented, and the keyword will be silently ignored.
 *
 * Only one storage-class-specifier may be present in a declaration specifiers list.
 *
 * Valid combinations of type specifiers:
 * - void
 * - char
 * - signed char
 * - unsigned char
 * - short, signed short, short int, signed short int
 * - unsigned short, unsigned short int
 * - int, signed, signed int
 * - unsigned, unsigned int
 * - long, signed long, long int, signed long int
 * - unsigned long, unsigned long int
 * - long long, signed long long, long long int, signed long long int
 * - unsigned long long, unsigned long long int
 * - float
 * - double
 * - long double
 * - _Bool
 * - float _Complex
 * - double _Complex
 * - long double _Complex
 * - struct-or-union-specifier
 * - enum-specifier
 * - typedef-name
 *
 * @param parser
 * @param is_declaration true if this is a declaration, false if this is a type specifier
 *                       if false, only type-specifiers and type-qualifiers are allowed
 * @param type Out parameter for the type that the specifiers represent
 * @return
 */
bool parse_specifiers(parser_t *parser, bool is_declaration, type_t *type) {
    const token_t *storage_class =NULL;
    bool is_const = false;
    bool is_volatile = false;
    bool is_inline = false;
    token_t *void_ = NULL;
    token_t *bool_ = NULL;
    token_t *char_ = NULL;
    token_t *short_ = NULL;
    token_t *int_ = NULL;
    token_t *long_ = NULL;
    token_t *long_long = NULL;
    token_t *float_ = NULL;
    token_t *double_ = NULL;
    token_t *signed_ = NULL;
    token_t *unsigned_ = NULL;
    token_t *complex_ = NULL;
    token_t *struct_or_union = NULL;
    token_t *enum_ = NULL;

    token_t *typedef_name_token = NULL;
    type_t *typedef_type = NULL;

    struct_t *struct_type = NULL;
    enum_specifier_t *enum_specifier = NULL;

    while (true) {
        token_t *token;
        if (is_declaration && (accept(parser, TK_TYPEDEF, &token) ||
            accept(parser, TK_EXTERN, &token) ||
            accept(parser, TK_STATIC, &token) ||
            accept(parser, TK_AUTO, &token) ||
            accept(parser, TK_REGISTER, &token))) {
            // storage-class-specifier
